Fix list content too large

--- a/css/back/global.less
+++ b/css/back/global.less
@@ -92,7 +92,7 @@ body {
                             }
 
                             span {
-                                font-size: 12px;
+                                font-size: 11px;
                                 margin-left: 10px;
                             }
                         }
