--- a/css/back/views/manage-elements.css
+++ b/css/back/views/manage-elements.css
@@ -639,7 +639,7 @@ body {
   font-size: 22px;
 }
 .wrapper #sidebar .sidebar-menu li ul li a span {
-  font-size: 12px;
+  font-size: 11px;
   margin-left: 10px;
 }
 .wrapper #sidebar .sidebar-menu li.active a,
